Fixed bug with header text in header overflowing & broken header overlay

--- a/src/layout/_header.scss
+++ b/src/layout/_header.scss
@@ -2,8 +2,7 @@
 
 header {
     position: relative;
-    display:flex;
-    flex-direction: column;
+    display: flex;
     color: $text-color-light;
     padding: 20px;
     height: 80vh;
@@ -12,18 +11,24 @@ header {
     background-repeat: no-repeat;
     background-position: center;
 
+    & > div {
+        display: flex;
+        align-items: center;
+        width: 100%;
+        height: 100%;
+    }
+
     .header-content {
         position: relative;
         z-index: 2;
         width: min(600px, 90%);
-        margin: 10% 10%;
+        margin: 0 10%;
     }
     .hero-overlay {
         position: absolute;
-        top: 0;
-        left: 0;
+        inset: 0;
         width: 100%;
-        height: 80vh;
+        height: 100%;
         background-color: rgba(51, 71, 26, 0.6);
         z-index: 1;
         pointer-events: none;
