--- a/src/layout/_mediaQ.scss
+++ b/src/layout/_mediaQ.scss
@@ -2,13 +2,9 @@
     header {
         height: 65vh;
 
-        .hero-overlay {
-            height: 65vh;
-        }
-
         .header-content {
             width: 85%;
-            margin: 14% auto;
+            margin: 0 auto;
         }
     }
 
@@ -59,12 +55,8 @@
         height: 55vh;
         padding: 16px;
 
-        .hero-overlay {
-            height: 55vh;
-        }
-
         .header-content {
-            margin: 20% auto;
+            margin: 0 auto;
             width: 90%;
         }
     }
@@ -138,12 +130,8 @@
     header {
         height: 50vh;
 
-        .hero-overlay {
-            height: 50vh;
-        }
-
         .header-content {
-            margin: 26% auto;
+            margin: 0 auto;
         }
     }
 
